Fixed margin issue, changes buttons to a elemnts, fixed spacing in yearsContainer

--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@
 }
 body,
 html {
-    background-color: aqua;
     display: flex;
     height: 100%;
     gap: 1em;
+    margin: 0;
 }
 #main-sideBar {
     background-color: rgb(45, 30, 96);
@@ -19,6 +19,13 @@ html {
     font-size: 30px;
 }
 #yearContainer {
+    font-size: large;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    gap: 1em;
+    margin-top: 1em;
+}
+a:hover {
+    color: rgb(23, 98, 168);
 }
